# picoPROMPROG

./: .gitignore  CMakeLists.txt  test.py
.cache/clangd/index/: config.h.A75F49F013EA1FA9.idx  console.cpp.946CD78DBF530CEC.idx  console.h.51B6936B79539962.idx  main.cpp.4B4B00C088D31DBA.idx  programmer.cpp.1C64C256DBDBF44B.idx  programmer.h.37463C13E7529138.idx  xmodem.cpp.1E29AA751D4EE0A5.idx  xmodem.h.28B38439F25D5100.idx
.github/workflows/: cmake.yml  codeql.yml
pio/: addressbus.pio  databus.pio
src/: config.h  console.cpp  console.h  main.cpp  main2.cpp  programmer.cpp  programmer.h  xmodem.cpp  xmodem.h
